clusters/main/kubernetes/system/networkpolicies/app/gatus-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: gatus
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: blocky
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: blocky
              app.kubernetes.io/name: blocky
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
